--- a/gb/news392_4.md
+++ b/gb/news392_4.md
@@ -20,6 +20,10 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/30/n11691240.md#1" target="_blank">王友群：中国一切问题的根源在中共</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/30/n11691240.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/wangyouqun-1-1-150x120.jpg" align ="left"></a>“错的都是别人，对的都是中共”，这是中共给中国人洗脑的一个重要观念。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 3:57 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/30/n11690947.md#1" target="_blank">王行：“倒戈”是中共覆灭前让人惊喜的一幕</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/30/n11690947.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/edited221-1-600x400-2-150x120.jpg" align ="left"></a>近几天，中共特工王立强投诚“倒戈”，已成对中共打击巨大的海内外轰炸性新闻，中共培养的一个得意精明间谍，没想到变成了“孙悟空”，他的出逃就好像从魔王的肚子里偷偷溜出，然后把它的肠子、肚子、脏心、烂肺全掏出来曝光一样，一下子让世界看清楚了中共在背地里所干的邪恶勾当。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 1:50 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/30/n11691030.md#1" target="_blank">洪微：邓小平埋下“一国两制”定时炸弹</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/30/n11691030.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/190617233359100484-600x400-150x120.jpg" align ="left"></a>中共还会假意承诺香港的“一国两制”，但应该没人真的再相信了。今天香港的局势，一度被称为“黑天鹅”事件，意指不可预见的突发事件，或者，是指极不可能发生，实际上却又发生的事件，果真如此吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 12:55 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/2/n11694805.md#1" target="_blank">李春草：日暮乡关何处是</a><br></h3>末日红楼美余晖，魔影匆匆愁时危；
+贸协难产费割舍，港人革命悬关税；
+众衙心虚空抗议，党媒脑残自吹擂；
+猖獗鼠疫惶权贵，识时红谍投诚归。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 4:07 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/1/n11693832.md#1" target="_blank">海网：殃视打人女记者在英国获罪感言</a><br></h3>
 
 礼仪之邦文明毁，
@@ -71,6 +75,5 @@
 却是一直对外
 向正义开火
 向普世宣战......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 1:18 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/11/30/n11690886.md#1" target="_blank">袁斌：香港媒体公信力排名，为何大公报排末座</a><br></h3>刚刚结束的香港区议会选举，泛民大胜，建制派惨败，再次证明主流民意是站在反送中这边的。可香港党媒《文汇报》、《大公报》等却将这一“挫折”归结于反对派“暴力操控选举”，还把它跟所谓的“以美国为首的西方”挂起钩来，说什么“从国际环境来看，以美国为首的西方连手干预香港选举更是前所未有。”这种歪曲事实的宣传自然遭到了所有了解实情.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 12:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/news392_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/news392_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rywys229/djy/blob/master/gb/news392_4.md#1<br><a href="https://github.com/rywys229/djy/blob/master/gb/news392_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rywys229/djy/blob/master/gb/news392_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_4.htm">http://www.epochtimes.com/gb/news392_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
