--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -22,12 +22,12 @@
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11706927.md#1" target="_blank">存违约风险 首只海航公募债宣布停牌</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11706927.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/1803202337372662-150x120.jpg" align ="left"></a>12月5日晚，海航集团发布公告称“09海航债”自12月6日开市起停牌，至2019年12月24日止。上海证券交易所已经批准停牌。“09海航债”是公募债，而在该债券到期前20日停牌，引发外界海航或因资金问题兑付存在不确定性猜测。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 7:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/6/n11705858.md#1" target="_blank">美中关系快速恶化 学者：新冷战已开始</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/6/n11705858.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1107120756582126-600x394-600x394-150x120.jpg" align ="left"></a>从美中贸易战开始，到最近美国连续通过两个抗击中共的法案，引发中共反弹。双方关系快速恶化。有美国学者认为，美中新冷战已开始，而且会变得更冷。有观点认为，就算美中贸易达成阶段性协议，也难阻新冷战。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 6:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11707147.md#1" target="_blank">程晓容：华为251折射中共司法冤案黑幕</a><br></h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11707147.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dd8865fa144798_ttl7dayQN6_d00e5415efdd629e-150x120.jpg" align ="left"></a>华为“251”是一颗炸弹，把许多人从“中国梦”中惊醒。一个表面上代表民族实力的品牌企业，它的“狼性”折射出其主人的非人化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 6:36 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11708050.md#1" target="_blank">四川男子双手发黑疑患血栓 医生：裤子掉色</a><br></h3>近日，四川泸州一名男子前往医院就诊，称自己双手突然发黑，认为自己患了血栓。医生让他用肥皂洗手两次后，他的皮肤恢复了正常，原来这是男子的裤子掉色所致。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:42 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11706911.md#1" target="_blank">遂宁小区疑似一氧化碳中毒事故 2死7住院</a><br></h3>12月8日，四川遂宁市安居区凤凰街道某小区发生一氧化碳中毒事件，导致2死、7人身体不适，已在医院救治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11707999.md#1" target="_blank">深圳两幼童身上淤青不断 竟是皮肤内有虫</a><br></h3>最近，深圳两名小兄妹身上反复出现淤青，且每次淤青的位置都不定，于是被送往医院检查。据医生介绍，小兄妹被确诊为绦虫类囊虫病，虫子进入人体后在体内到处游走，导致皮出现结节和轻微淤青。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/8/n11707874.md#1" target="_blank">每日三退声明精选（2019/12/07）</a><br></h3>我“六四”时就想退出共产党，当时把党委的领导吓得够呛，硬劝结果没退成。因为家庭背景是高干，我对共产党看得很透了，也看了“九评共产党”。现在我声明退出入过的党团队一切共产党的组织，与邪恶彻底决裂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 10:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11707704.md#1" target="_blank">业绩差 南宁一公司多名员工穿内裤寒风中罚站</a><br></h3>近日广西南宁最低气温约10℃，有市民看到，在当街有几名男子只穿着内裤，站在寒风中瑟瑟发抖，还有人拿着棍子在旁边训话。据悉是某传媒公司的员工因业绩差而遭罚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 7:24 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11707358.md#1" target="_blank">桂民海瑞典获奖 中共驻瑞大使威胁制裁遭批</a><br></h3>中共驻瑞典大使桂从友周三（4日）在哥德堡大学参加活动时，宣称因瑞典早前颁奖给目前羁押在大陆的书商桂民海，中共在文化领域之外将再对瑞典实施贸易制裁。目前瑞典外交部还未收到中方正式制裁通知，有瑞典学者透露，瑞典已向欧盟发出反制中共请求。有评论人士认为，桂从友是中共粗鄙和“讹诈式外交”的代表。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 10:41 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11706594.md#1" target="_blank">【翻墙必看】解体中共的大事件频发生</a><br></h3>近日，美国的中国问题专家、宾夕法尼亚大学教授林蔚（Arthur Waldron）在接受英文《大纪元时报》专访时披露，一个习近平身边的高层幕僚告知，中共内部承认正在走向解体。事实确实如此。目前，中共正面临有史以来最大的全面危机，解体中共的重大事件，正以高频率接连发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 8:42 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11707197.md#1" target="_blank">河南许昌一高中女生从学校五楼跳下</a><br></h3>12月6日上午，河南许昌建安区三高发生一名女学生跳楼事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 6:30 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/19/12/7/n11707059.md#1" target="_blank">兰州兽研所布鲁氏菌阳性人数增至96人</a><br></h3>目前，中国农业科学院兰州兽医研究所布鲁氏菌阳性人数已增至96人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 5:17 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rywys229/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rywys229/djy/blob/master/gb/nsc413_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rywys229/djy/blob/master/gb/nsc413_2.md#1<br><a href="https://github.com/rywys229/djy/blob/master/gb/nsc413_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rywys229/djy/blob/master/gb/nsc413_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_2.htm">http://www.epochtimes.com/gb/nsc413_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
